plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = 17

repositories {
    mavenCentral()
}

java {
    modularity.inferModulePath = true
}

dependencies {
    // gson
    implementation 'com.google.code.gson:gson:2.9.1'
    // javafx
    implementation 'org.openjfx:javafx-base:18.0.2:linux'
    implementation 'org.openjfx:javafx-controls:18.0.2:linux'
    implementation 'org.openjfx:javafx-graphics:18.0.2:linux'
    implementation 'org.openjfx:javafx-fxml:18.0.2:linux'
    implementation 'org.jetbrains:annotations:23.0.0'
    // Tests
    testImplementation 'org.mockito:mockito-core:4.6.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
    testImplementation 'org.assertj:assertj-core:3.23.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
}

application {
    mainClass = "engineer.App"
    mainModule = "the.engineer.main"
}


test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
